--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,73 +1,89 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/bg_color">
 
-    <include layout="@layout/actionbar" />
-
-    <TableLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:background="#59c0f5">
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="60dip"
+            android:src="@mipmap/start_top_bg"
+            android:scaleType="fitEnd"
+            android:layout_alignParentBottom="true"/>
+        <ImageView
+            android:layout_width="200dip"
+            android:layout_height="match_parent"
+            android:src="@drawable/logo_white"
+            android:scaleType="fitCenter"
+            android:padding="@dimen/padding_default"/>
+    </RelativeLayout>
 
-        <TableRow>
+    <LinearLayout
+        android:id="@+id/lv_menu"
+        android:layout_width="match_parent"
+        android:layout_height="500dip"
+        android:orientation="horizontal"
+        android:padding="8dip">
 
-            <Button
-                android:layout_width="0dip"
-                android:layout_weight="1"
-                android:onClick="menuClick"
-                android:tag="0"
-                android:text="掌上求职" />
+        <LinearLayout
+            android:layout_width="0dip"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_marginRight="8dip"
+            android:orientation="vertical">
+            <cn.goodjobs.common.view.imagemenu.MyImageView
+                android:id="@+id/menuQuanzhi"
+                android:layout_width="match_parent"
+                android:layout_height="0dip"
+                android:scaleType="matrix"
+                android:layout_weight="3"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="8dip"/>
+            <cn.goodjobs.common.view.imagemenu.MyImageView
+                android:id="@+id/menuLanling"
+                android:layout_width="match_parent"
+                android:scaleType="matrix"
+                android:layout_height="0dip"
+                android:layout_weight="2"/>
+        </LinearLayout>
 
-            <Button
-                android:layout_width="0dip"
-                android:layout_weight="1"
-                android:onClick="menuClick"
-                android:tag="1"
-                android:text="校园招聘" />
-        </TableRow>
+        <LinearLayout
+            android:layout_width="0dip"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+            <cn.goodjobs.common.view.imagemenu.MyImageView
+                android:id="@+id/menuXiaoyuan"
+                android:layout_width="match_parent"
+                android:layout_height="0dip"
+                android:scaleType="matrix"
+                android:layout_weight="2"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="8dip"/>
+            <cn.goodjobs.common.view.imagemenu.MyImageView
+                android:id="@+id/menuLietou"
+                android:layout_width="match_parent"
+                android:layout_height="0dip"
+                android:scaleType="matrix"
+                android:layout_weight="2"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="8dip"/>
+            <cn.goodjobs.common.view.imagemenu.MyImageView
+                android:id="@+id/menuJianzhi"
+                android:layout_width="match_parent"
+                android:layout_height="0dip"
+                android:scaleType="matrix"
+                android:layout_weight="1"/>
+        </LinearLayout>
 
-        <TableRow>
-
-            <Button
-                android:layout_width="0dip"
-                android:layout_weight="1"
-                android:onClick="menuClick"
-                android:tag="2"
-                android:text="猎头职位" />
-
-            <Button
-                android:layout_width="0dip"
-                android:layout_weight="1"
-                android:onClick="menuClick"
-                android:tag="3"
-                android:text="兼职信息" />
-        </TableRow>
-
-        <TableRow>
-
-            <Button
-                android:layout_width="0dip"
-                android:layout_weight="1"
-                android:text="蓝领招聘" />
-
-            <Button
-                android:layout_width="0dip"
-                android:layout_weight="1"
-                android:text="职位推荐" />
-        </TableRow>
-
-        <TableRow>
-
-            <Button
-                android:layout_width="0dip"
-                android:layout_weight="1"
-                android:text="我的简历" />
-
-            <Button
-                android:layout_width="0dip"
-                android:layout_weight="1"
-                android:text="简历刷新" />
-        </TableRow>
-    </TableLayout>
+    </LinearLayout>
 
 </LinearLayout>
