--- a/common/src/main/res/layout/topbar.xml
+++ b/common/src/main/res/layout/topbar.xml
@@ -19,10 +19,10 @@
         android:layout_width="@dimen/topbar_height"
         android:layout_height="match_parent"
         android:layout_alignParentRight="true"
-        android:src="@drawable/icon_list1"
+        android:src="@drawable/icon_list"
         android:scaleType="fitCenter"
         android:background="@drawable/topbar_btn_bg"
-        android:padding="10dip"/>
+        android:padding="13dip"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -60,7 +60,7 @@
             android:layout_width="18dip"
             android:layout_height="18dip"
             android:layout_marginLeft="5dip"
-            android:src="@drawable/icon_down_white"
+            android:src="@drawable/icon_map"
             android:scaleType="fitCenter"/>
     </LinearLayout>
 
