朱理最后提交

--- a/applyjobs/src/main/res/layout/fragment_job_search.xml
+++ b/applyjobs/src/main/res/layout/fragment_job_search.xml
@@ -1,12 +1,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:listitem="http://schemas.android.com/apk/res-auto"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@color/bg_color"
-              android:orientation="vertical">
+    xmlns:listitem="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/bg_color"
+    android:orientation="vertical">
 
-    <include layout="@layout/actionbar"/>
+    <include layout="@layout/actionbar" />
 
     <EditText
         android:id="@+id/etSearch"
@@ -19,7 +19,7 @@
         android:paddingLeft="@dimen/padding_small"
         android:singleLine="true"
         android:textColorHint="@color/light_color"
-        android:textSize="@dimen/text_small"/>
+        android:textSize="@dimen/text_small" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -36,7 +36,7 @@
                 android:background="@color/white"
                 android:orientation="vertical">
 
-                <View style="@style/line"/>
+                <View style="@style/line" />
 
                 <cn.goodjobs.common.view.searchItem.SelectorItemView
                     android:id="@+id/item_address"
@@ -47,7 +47,7 @@
                     listitem:hint="定位中..."
                     listitem:singleSelected="true"
                     listitem:source="jobloc_pro;jobloc_city"
-                    listitem:tvtitle="工作地点"/>
+                    listitem:tvtitle="工作地点" />
 
                 <cn.goodjobs.common.view.searchItem.SelectorItemView
                     android:id="@+id/item_jobfunc"
@@ -58,7 +58,7 @@
                     listitem:hint="选择求职岗位"
                     listitem:singleSelected="false"
                     listitem:source="jobfunc_l1;jobfunc_l2"
-                    listitem:tvtitle="求职岗位"/>
+                    listitem:tvtitle="求职岗位" />
 
                 <cn.goodjobs.common.view.searchItem.SelectorItemView
                     android:id="@+id/item_indtype"
@@ -69,7 +69,7 @@
                     listitem:hint="选择求职行业"
                     listitem:singleSelected="false"
                     listitem:source="indtype"
-                    listitem:tvtitle="求职行业"/>
+                    listitem:tvtitle="求职行业" />
 
                 <cn.goodjobs.common.view.searchItem.SelectorItemView
                     android:id="@+id/item_salary"
@@ -80,7 +80,7 @@
                     listitem:hint="选择薪资要求"
                     listitem:singleSelected="true"
                     listitem:source="salary"
-                    listitem:tvtitle="薪资要求"/>
+                    listitem:tvtitle="薪资要求" />
 
                 <cn.goodjobs.common.view.searchItem.SelectorItemView
                     android:id="@+id/item_worktime"
@@ -92,7 +92,7 @@
                     listitem:showLine="true"
                     listitem:singleSelected="true"
                     listitem:source="worktime"
-                    listitem:tvtitle="工作经验"/>
+                    listitem:tvtitle="工作经验" />
 
                 <cn.goodjobs.common.view.searchItem.SelectorItemView
                     android:id="@+id/item_degree"
@@ -104,9 +104,9 @@
                     listitem:showLine="false"
                     listitem:singleSelected="true"
                     listitem:source="degree"
-                    listitem:tvtitle="学历要求"/>
+                    listitem:tvtitle="学历要求" />
 
-                <View style="@style/line"/>
+                <View style="@style/line" />
             </LinearLayout>
 
             <LinearLayout
@@ -161,7 +161,7 @@
                 android:background="@drawable/button_bg"
                 android:text="搜索"
                 android:textColor="@color/white"
-                android:textSize="@dimen/text_default"/>
+                android:textSize="@dimen/text_default" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -172,10 +172,9 @@
                 <cn.goodjobs.common.view.SegmentView
                     android:id="@+id/search_switch"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/space_40">
-                </cn.goodjobs.common.view.SegmentView>
+                    android:layout_height="@dimen/space_40"></cn.goodjobs.common.view.SegmentView>
 
-                <View style="@style/line"/>
+                <View style="@style/line" />
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -206,14 +205,14 @@
                             android:paddingTop="20dip"
                             android:text="请先登录"
                             android:textColor="@color/bule_low_color"
-                            android:visibility="gone"/>
+                            android:visibility="gone" />
                     </LinearLayout>
                 </RelativeLayout>
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1px"
-                    android:layout_marginTop="20dip"/>
+                    android:layout_marginTop="20dip" />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
