--- a/campusjobs/src/main/res/layout/activity_campussearch.xml
+++ b/campusjobs/src/main/res/layout/activity_campussearch.xml
@@ -103,6 +103,22 @@
                 android:textColor="@color/white"
                 android:textSize="@dimen/text_default" />
 
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="@dimen/text_default"
+                    android:textColor="@color/main_color"/>
+
+            </LinearLayout>
+
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
