设置默认模块

--- a/common/src/main/res/layout/topbar.xml
+++ b/common/src/main/res/layout/topbar.xml
@@ -21,6 +21,7 @@
         android:layout_alignParentRight="true"
         android:src="@drawable/icon_list"
         android:scaleType="fitCenter"
+        android:onClick="toSetting"
         android:background="@drawable/topbar_btn_bg"
         android:padding="13dip"/>
 
